--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,21 @@
 /* You can add global styles to this file, and also import other style files */
+body,
+html {
+  box-sizing: border-box;
+  font-weight: 400;
+  font-style: normal;
+  letter-spacing: 0;
+  font-family: "Avenir Next W01", "Avenir Next W00", "Avenir Next", Avenir,
+    "Helvetica Neue", sans-serif;
+  line-height: 1.5;
+  color: #4c4c4c;
+  margin: 0;
+  padding: 0;
+
+}
+
+body{
+  background-color: #4c4c4c;
+}
+
+
