--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,52 +1,56 @@
-*{
+* {
   padding: 0;
   margin: 0;
 }
 
-section{
-  margin:5px;
-  background-color:white;
-  padding:1px
+section {
+  margin: 5px;
+  background-color: white;
+  padding: 1px;
 }
-header{
+header {
   margin-bottom: 6px;
-  padding:5px;
-  border:1px solid #a9a9a9;
+  padding: 5px;
+  border: 1px solid #a9a9a9;
 }
 
-.country{
+.country {
   margin-bottom: 6px;
 }
-.container{
+.container {
   margin-bottom: 6px;
   display: flex;
   flex-direction: row;
 }
 
-.map{
-  flex:3;
-  border:1px solid #a9a9a9;
+.map {
+  flex: 3;
+  border: 1px solid #a9a9a9;
 }
 
-.states{
-  flex:1;
-  border:1px solid #a9a9a9;
+.states {
+  flex: 1;
+  border: 1px solid #a9a9a9;
 }
 
-.state{
-  flex:2;
+.state {
+  flex: 2;
 }
 
-.right{
-  margin-right:6px;
+.right {
+  margin-right: 6px;
 }
 
 @media only screen and (max-width: 768px) {
-  .container{
+  .container {
     flex-direction: column;
-
   }
-  .right{
+
+
+  .mbottom{
+    margin-bottom: 6px;
+  }
+  .right {
     margin-right: 0;
   }
 }
