--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,13 +6,13 @@
     <app-country></app-country>
   </div>
   <div class="container">
-    <div class="states right">
+    <div class="states right mbottom">
       <app-states></app-states>
     </div>
-    <div class="map right">
+    <div class="map right mbottom">
       <app-map></app-map>
     </div>
-    <div class="state">
+    <div class="state ">
       <router-outlet></router-outlet>
     </div>
   </div>
